--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>N-E-C</title>
  <style> 
  
+ body{
+  background-repeat: no-repeat;
+ }
   h1{
     color: #f3fff8;
     font-family: fantasy;
@@ -17,10 +20,6 @@
     letter-spacing: 0.1em;
     transition: 0.5s;
   }
-
-
- 
-
   .container{
     display: flex;
     justify-content: center;
@@ -224,7 +223,8 @@ p6{
   }
  </style>
 </head>
-<body background="contro444.png">
+<body background="gmgist.png">
+
   <div class="color">
   <div class="main"><hr color="aliceblue">
  <img src="sgllogo221.jpg" align="left" > 
@@ -272,10 +272,10 @@ p6{
 <footer>
   <br>
   <br>
- <font size="4px"> | ALL RIGHT RESERVED S.A.R N.E.C | </font>
+ <font size="4px">|Thanks For Visiting Our Site|</font>
+ <br>
+ <br>
  <hr color="aliceblue">
- <br>
- <br>
 </footer>
 </body>
 </html>
